# RiftCrawler

./: .gitignore  Cargo.toml  main.ipynb
analysis/: core.py
crawler/: Cargo.toml
crawler/src/: main.rs  riftcrawler.rs
dashboard/: Cargo.toml
dashboard/src/: game.rs  gameslist.rs  main.rs
dashboard/src/analysis/: highest_level.rs  mod.rs
dashboard/src/analysis/models/: game.rs  participant.rs
dashboard/src/models/: game.rs  mod.rs  participant.rs  team.rs
dashboard/static/: index.html
database/: loader.py
src/: lsgcclient.rs  main.rs  riftcrawler.rs  tools.rs
