[package]
name = "riftcrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.107"
env_logger = "0.10.0"
log = "0.4.20"
indicatif = "0.17.7"
rand = "0.8.5"
clap = { version = "4.5.1", features = ["derive"] }
